Improved efficiency of PlayerTempUpdater